// Original file: proto/random.proto

import type { TodoRequest as _randomPackage_TodoRequest, TodoRequest__Output as _randomPackage_TodoRequest__Output } from '../randomPackage/TodoRequest';

export interface TodoResponse {
  'todos'?: (_randomPackage_TodoRequest)[];
}

export interface TodoResponse__Output {
  'todos'?: (_randomPackage_TodoRequest__Output)[];
}
